<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_visualization_schedule</name>
  <version>2.0.0</version>
  <description>A visualizer for trajectories in rmf schedule</description>
  <maintainer email="yadunund@openrobotics.org">Yadunund</maintainer>
  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmf_traffic</depend>
  <depend>rmf_traffic_ros2</depend>
  <depend>rmf_traffic_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>libwebsocketpp-dev</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rmf_visualization_msgs</depend>
  <depend>rosidl_default_generators</depend>
  <depend>builtin_interfaces</depend>
  <depend>eigen</depend>
  <depend>libssl-dev</depend>
  <depend>libboost-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>rmf_utils</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
