<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz2_plugin</name>
  <version>0.0.0</version>
  <description>A package to create a custom plugin for rviz</description>
  <maintainer email="yadunund@openrobotics.org">yadu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rmf_schedule_visualizer_msgs</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>pluginlib</depend>
  <depend>resource_retriever</depend>

  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
